--- a/_data/resume.yml
+++ b/_data/resume.yml
@@ -29,7 +29,7 @@ education:
 publication:
   - title: Revisiting Iso-Recursive Subtyping.
     authors: Yaoda Zhou, Jinxu Zhao and Bruno C. d.  S. Oliveira
-    conf: Under review. 
+    conf: To appear in the TOPLAS journal.
     link: static/TOPLASdraft.pdf
     note: This is the extended version of OOPSLA'20 paper.
     artifact: https://github.com/juda/Iso-Recursive-Subtyping
